--- a/Smart Notepad.ipynb
+++ b/Smart Notepad.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import speech_recognition as sr\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "Speak Anything :\n",
-      "You said : I love to eat biryani\n"
+      "You said : I love to play cricket\n"
      ]
     }
    ],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -162,58 +163,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>my name is Devashish</td>\n",
+       "      <td>my name is daivastana</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>My name is debasis samal</td>\n",
+       "      <td>I was born in Odisha</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>I work in TCS</td>\n",
+       "      <td>I live in Hyderabad</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>my birthday is on May 13th</td>\n",
+       "      <td>my age is 25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>every morning at 6 o'clock I go to gym</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>I am from Odisha</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>my mum name is Basanti Tamil</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>my dog name is Max</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>I love to eat biryani</td>\n",
+       "      <td>I love to play cricket</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Things to remember\n",
-       "0                    my name is Devashish\n",
-       "1                My name is debasis samal\n",
-       "2                           I work in TCS\n",
-       "3              my birthday is on May 13th\n",
-       "4  every morning at 6 o'clock I go to gym\n",
-       "5                        I am from Odisha\n",
-       "6            my mum name is Basanti Tamil\n",
-       "7                      my dog name is Max\n",
-       "8                   I love to eat biryani"
+       "       Things to remember\n",
+       "0   my name is daivastana\n",
+       "1    I was born in Odisha\n",
+       "2     I live in Hyderabad\n",
+       "3            my age is 25\n",
+       "4  I love to play cricket"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 9/9 [00:00<00:00, 3001.65it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 5/5 [00:00<00:00, 4992.03it/s]\n"
      ]
     }
    ],
@@ -247,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -264,18 +245,9 @@
      "output_type": "stream",
      "text": [
       "Speak Anything :\n",
-      "You said : what is my puppies name\n"
+      "You asked : where was born\n",
+      "you were born in Odisha\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'my dog name is Max'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -287,7 +259,7 @@
     "    audio = r.listen(source)\n",
     "    try:\n",
     "        title1 = r.recognize_google(audio)\n",
-    "        print(\"You said : {}\".format(title1))\n",
+    "        print(\"You asked : {}\".format(title1))\n",
     "    except:\n",
     "        print(\"Sorry could not recognize what you said, please say again\")\n",
     "        title1 = input(\"Please write down your input \")\n",
@@ -295,54 +267,28 @@
     "#title1 = input(\"Please enter what you want to be reminded of. \")\n",
     "title_vec_new = np.array([w2vec.word_vec(x) for x in word_tokenize(title1) if x in w2vec.vocab]).mean(axis=0)\n",
     "title_vec_new = np.nan_to_num(title_vec_new)\n",
+    "\n",
     "b=[]\n",
     "for i in range(0,title_vec.shape[0]):\n",
     "    a = np.array([title_vec[i],title_vec_new])\n",
     "    b.append(cosine_similarity(a))\n",
+    "    \n",
     "e=[]\n",
     "for i in range(0,title_vec.shape[0]):\n",
     "    d = b[i][1][0]\n",
     "    e.append(d)\n",
+    "    \n",
     "c = e.index(max(e))\n",
-    "data[\"Things to remember\"][c]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.9667493624028627,\n",
-       " 0.5077201810168148,\n",
-       " 0.762892015686441,\n",
-       " 0.8395756363448735,\n",
-       " 0.7369204394054787,\n",
-       " 0.7548314603428695,\n",
-       " 0.9585144882308441,\n",
-       " 0.9744873370749163,\n",
-       " 0.825233363073221]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e\n",
+    "answer = data[\"Things to remember\"][c]\n",
     "\n",
-    "# This is cosine similarity of the question asked with all the data in my database"
+    "forms = {\"am\" : \"are\", \"are\" : \"am\", 'i' : 'you', 'my' : 'your', 'me' : 'you', 'mine' : 'yours', 'you' : 'I', 'your' : 'my', 'yours' : 'mine', 'was' : 'were'}\n",
+    "def translate(word):\n",
+    "  if word.lower() in forms: return forms[word.lower()]\n",
+    "  return word\n",
+    "\n",
+    "result = ' '.join([translate(word) for word in nltk.wordpunct_tokenize(answer)])\n",
+    "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
